<resources>
    <string name="app_name">CNE-shop</string>

    <string name="text">测试数据</string>

    <string name="tab_home">首页</string>
    <string name="tab_hot">商城</string>
    <string name="tab_assort">品质</string>
    <string name="tab_cart">购物车</string>
    <string name="tab_mine">我的</string>

    <string name="title_promote">推荐</string>
    <string name="title_scare_buying">抢购</string>
    <string name="tex_hot">热门活动</string>
    <string name="tex_search">请输入搜索的商品</string>

    <string name="page_ref">刷新</string>
    <string name="page_loadmore">加载更多</string>
    <string name="page_notmore">已经到底啦</string>

    <string name="tex_login">点击登录</string>
    <string name="but_buy">点击购买</string>

    <string name="but_ited">编辑</string>

    <string name="order_type_defaute">默认</string>
    <string name="order_type_price">价格</string>
    <string name="order_type_sales">销量</string>

    <string name="title_login">用户登录</string>
    <string name="text_user">用户账号</string>
    <string name="text_pass">用户密码</string>
    <string name="but_login">立即登录</string>
    <string name="but_regist">注册账号</string>
    <string name="but_forget_pass">忘记密码</string>

    <string name="input_your_account">请输入您的账号</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="user_privacy">用户%1$s代表同意《宜尚生活隐私政策》</string>
    <string name="get_verification">获取验证码</string>
    <string name="input_verification_hint">请输入验证码</string>
    <string name="input_phone_hint">请输入手机号码</string>
    <string name="regist_pwd">请输入6位以上密码</string>
    <string name="register">注册</string>
    <string name="account_password_login">账号密码登录</string>
    <string name="sms_login">手机验证码登录</string>
    <string name="login_register">登录/注册</string>
    <string name="my_order">我的订单</string>
    <string name="my_zh">账号管理</string>
    <string name="my_gwc">购物车</string>

    <string name="my_sc">我的收藏</string>
    <string name="my_dz">收货地址</string>
    <string name="my_kf">客服中心</string>
    <string name="my_xx">消息通知</string>
    <string name="my_sh">售后服务政策</string>
    <string name="my_sz">我的设置</string>
    <string name="my_gy">关于Vissun</string>
    <string name="register_is_complete">注册完成! 您获得50个积分</string>


</resources>
