<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/title_root" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/eighty_eight_px">
        <ImageView android:id="@+id/left_text" android:paddingLeft="@dimen/thirty_px" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_arrow_left" android:scaleType="centerCrop" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/header_text_size" android:textColor="@color/gray_1" android:ellipsize="end" android:id="@+id/title_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="90.0dip" android:layout_marginRight="90.0dip" android:singleLine="true" android:layout_centerInParent="true" />
    </RelativeLayout>
    <View android:background="@color/line" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/layout_phone" android:background="@color/white" android:paddingLeft="30.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="53.0dip">
        <ImageView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_verify_phone" />
        <EditText android:textSize="@dimen/thirty_sp" android:textColor="@color/house_style_dark" android:textColorHint="@color/btn_disable" android:id="@+id/phone_number" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginRight="@dimen/eighteen_px" android:hint="@string/input_phone_hint" android:layout_weight="1.0" android:inputType="phone" android:imeOptions="actionNext" android:textCursorDrawable="@drawable/color_cursor" />
        <ImageView android:id="@+id/delete_phone" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_delete_password" />
        <TextView android:enabled="false" android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_get_verification" android:background="@drawable/selector_tv_pink" android:layout_width="100.0dip" android:layout_height="30.0dip" android:text="@string/get_verification" />
    </LinearLayout>
    <View android:background="@color/look_detail_bg" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/layout_verify_code" android:background="@color/white" android:paddingLeft="30.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="53.0dip">
        <ImageView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_yanzheng" />
        <EditText android:textSize="@dimen/thirty_sp" android:textColor="@color/house_style_dark" android:textColorHint="@color/btn_disable" android:id="@+id/verify_code" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginRight="@dimen/eighteen_px" android:hint="@string/input_verification_hint" android:layout_weight="1.0" android:inputType="phone" android:imeOptions="actionDone" android:textCursorDrawable="@drawable/color_cursor" />
        <ImageView android:id="@+id/delete_verify" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_delete_password" />
    </LinearLayout>
    <View android:background="@color/look_detail_bg" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/layout_password" android:background="@color/white" android:paddingLeft="30.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="53.0dip">
        <ImageView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_password_login" />
        <EditText android:textSize="@dimen/thirty_sp" android:textColor="@color/house_style_dark" android:textColorHint="@color/btn_disable" android:id="@+id/password" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginRight="@dimen/eighteen_px" android:hint="@string/regist_pwd" android:maxLength="20" android:layout_weight="1.0" android:inputType="textPassword" android:imeOptions="actionDone" android:textCursorDrawable="@drawable/color_cursor" />
        <ImageView android:id="@+id/delete_password" android:paddingLeft="7.0dip" android:paddingTop="10.0dip" android:paddingRight="7.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_delete_password" />
        <ImageView android:id="@+id/show_hide_psw" android:paddingLeft="7.0dip" android:paddingTop="10.0dip" android:paddingRight="7.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_eye_disable" />
    </LinearLayout>
    <View android:background="@color/look_detail_bg" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" />
    <Button android:enabled="false" android:textSize="19.0sp" android:textColor="@color/white" android:id="@+id/btn_register" android:background="@drawable/selector_btn_pink" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="32.0dip" android:layout_marginRight="35.0dip" android:text="@string/register" />
    <include android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="20.0dip" layout="@layout/layout_privacy" />
</LinearLayout>