<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  >
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/layout_phone" android:background="@color/white" android:paddingLeft="30.0dip" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="53.0dip">
        <ImageView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_verify_phone" />
        <EditText android:textSize="@dimen/thirty_two_sp" android:textColor="@color/house_style_dark" android:textColorHint="@color/btn_disable" android:id="@+id/phone_number" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginRight="@dimen/eighteen_px" android:hint="@string/input_your_account" android:layout_weight="1.0" android:inputType="phone" android:imeOptions="actionNext" android:textCursorDrawable="@drawable/color_cursor" />
        <ImageView android:id="@+id/clear_phone" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_text_delete" />
    </LinearLayout>
    <View android:background="@color/look_detail_bg" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/layout_password" android:background="@color/white" android:paddingLeft="30.0dip" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="53.0dip">
        <ImageView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_password_login" />
        <EditText android:textSize="@dimen/thirty_two_sp" android:textColor="@color/house_style_dark" android:textColorHint="@color/btn_disable" android:id="@id/password" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginRight="@dimen/eighteen_px" android:hint="@string/input_password_hint" android:maxLength="20" android:layout_weight="1.0" android:inputType="textPassword" android:imeOptions="actionDone" android:textCursorDrawable="@drawable/color_cursor" />
        <ImageView android:id="@+id/delete_password" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_delete_password" />
        <ImageView android:id="@+id/show_hide_psw" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_eye_disable" />
    </LinearLayout>
    <View android:background="@color/look_detail_bg" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" />
    <Button android:enabled="false" android:textSize="19.0sp" android:textColor="@color/white" android:id="@+id/login" android:background="@drawable/selector_btn_pink" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="32.0dip" android:layout_marginRight="35.0dip" android:text="@string/login" />
    <include android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="20.0dip" layout="@layout/layout_privacy" />
</LinearLayout>